--- a/index.html
+++ b/index.html
@@ -2,10 +2,6 @@
 layout: default
 ---
 
-<!--  -->
-<div class="container">
-</div>
-
 <!-- Custome component: Module -->
 <div class="container mb-3">
     <div class="row bg-white">
@@ -56,8 +52,8 @@ layout: default
         <div class="card">
             <div class="card-header" id="headingTwo">
                 <h2 class="mb-0">
-                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo"
-                        aria-expanded="false" aria-controls="collapseTwo">
+                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
+                        data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                         Collapsible Group Item #2
                     </button>
                 </h2>
@@ -77,8 +73,8 @@ layout: default
         <div class="card">
             <div class="card-header" id="headingThree">
                 <h2 class="mb-0">
-                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree"
-                        aria-expanded="false" aria-controls="collapseThree">
+                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
+                        data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                         Collapsible Group Item #3
                     </button>
                 </h2>
@@ -303,6 +299,16 @@ layout: default
     </div>
 </div>
 
+<!-- Space Template Demo -->
+<div class="container" style="margin: 10px auto;">
+    <div class="row bg-white">
+        <div class="col-12"  style="margin: 10px auto;">
+            <a class="btn btn-primary btn-lg" role="button" href="/space-demo/demo.html"> Space Template demo </a>
+        </div>
+    </div>
+
+</div>
+    
 <div class="container">
     <div class="row">
         <div class="col">
