Dodano główne hero dla RX

--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@ layout: default
 			<a class="btn btn-primary btn-lg mr-3" href="/space-demo/bsc-offerings.html"> 
 				Oferta BSC
 			</a>
-			
+			<a class="btn btn-primary btn-lg mr-3" href="/space-demo/bsc-menu.html">
+				Menu - strona główna
+			</a>
 		</div>
 	</div>
 </div>
