:hammer: poprawiono strukturę stylów

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 ---
 layout: default
+title: Strona główna
 ---
 
 <!-- Carosuel -->
+<div class="container">
 	<div class="bd-example">
 		<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
 			<ol class="carousel-indicators">
@@ -43,6 +45,7 @@ layout: default
 			</a>
 		</div>
 	</div>
+</div>
 
 <!-- Space Template Demo -->
 <div class="container">
