Dodano baner i nową stronę dla footer

--- a/index.html
+++ b/index.html
@@ -52,17 +52,20 @@ title: Strona główna
 	<div class="row bg-white">
 		<div class="col-12"  style="margin: 10px auto;">
 			<h3>Space Theme Demos</h3>
-			<a class="btn btn-primary btn-lg mr-3" href="/space-demo/demo.html"> 
+			<a class="btn btn-primary btn-lg mr-3 mt-2" href="/space-demo/demo.html"> 
 				Playgorund (demo.html)
 			</a>
-			<a class="btn btn-primary btn-lg mr-3" href="/space-demo/icon-blocks.html"> 
+			<a class="btn btn-primary btn-lg mr-3 mt-2" href="/space-demo/icon-blocks.html"> 
 				Icon Blocks 
 			</a>
-			<a class="btn btn-primary btn-lg mr-3" href="/space-demo/bsc-offerings.html"> 
+			<a class="btn btn-primary btn-lg mr-3 mt-2" href="/space-demo/bsc-offerings.html"> 
 				Oferta BSC
 			</a>
-			<a class="btn btn-primary btn-lg mr-3" href="/space-demo/bsc-menu.html">
+			<a class="btn btn-primary btn-lg mr-3 mt-2" href="/space-demo/bsc-menu.html">
 				Menu - strona główna
+			</a>
+			<a class="btn btn-primary btn-lg mr-3 mt-2" href="/space-demo/bsc-footer.html">
+				Stopka BSC
 			</a>
 		</div>
 	</div>
