Poprawiono strukture SCSS oraz dodano stopke BSC

--- a/space-demo/bsc-footer.html
+++ b/space-demo/bsc-footer.html
@@ -1,26 +1,24 @@
 ---
 layout: space-extra
-url-tools: tools/
-url-services: services/
 ---
 
-<footer class="bg-dark">
+<footer>
     <div class="container py-5 d-flex flex-nowrap">
         <div class="footer-columns order-md-2 flex-grow-1">
             <div class="row mb-7 mb-lg-0">
                 <div class="col-sm-4">
-                    <h3 class="h6 text-white mb-3">O nas</h3>
-                    <div class="list-group list-group-flush list-group-transparent">
-                        <a class="list-group-item list-group-item-action" href="../html/pages/contacts-agency.html">
+                    <h6>O nas</h6>
+                    <div class="footer-list">
+                        <a class="footer-list-item" href="/about/bsc-polska.html">
                             BSC Polska
                         </a>
-                        <a class="list-group-item list-group-item-action" href="../html/pages/help.html">
+                        <a class="footer-list-item" href="/about/team.html">
                             Zespół
                         </a>
-                        <a class="list-group-item list-group-item-action" href="../html/pages/careers.html">
+                        <a class="footer-list-item" href="/abput/careers.html">
                             Ofert pracy
                         </a>
-                        <a class="list-group-item list-group-item-action" href="../html/pages/terms.html">
+                        <a class="footer-list-item" href="/about/contact.html">
                             Kontakt
                         </a>
                     </div>
