--- a/space-demo/bsc-footer.html
+++ b/space-demo/bsc-footer.html
@@ -1,5 +1,5 @@
 ---
-layout: space-extra
+layout: default-extra
 ---
 
 <footer>
@@ -9,46 +9,32 @@ layout: space-extra
                 <div class="col-sm-4">
                     <h6>O nas</h6>
                     <div class="footer-list">
-                        <a class="footer-list-item" href="/about/bsc-polska.html">
-                            BSC Polska
-                        </a>
-                        <a class="footer-list-item" href="/about/team.html">
-                            Zespół
-                        </a>
-                        <a class="footer-list-item" href="/abput/careers.html">
-                            Ofert pracy
-                        </a>
-                        <a class="footer-list-item" href="/about/contact.html">
-                            Kontakt
-                        </a>
+                        <a class="footer-list-item" href="/about/bsc-polska.html">BSC Polska</a>
+                        <a class="footer-list-item" href="/about/team.html">Zespół</a>
+                        <a class="footer-list-item" href="/abput/careers.html">Oferty pracy</a>
+                        <a class="footer-list-item" href="/about/contact.html">Kontakt</a>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <h3 class="h6 text-white mb-3">Narzędzia</h3>
-                    <div class="list-group list-group-flush list-group-transparent">
-                        <a class="list-group-item list-group-item-action" href="../html/shop/classic.html">
-                            Embarcadero RAD Studio
-                        </a>
-                        <a class="list-group-item list-group-item-action" href="../html/shop/single-product.html">
-                            Sencha Ext JS
-                        </a>
-                        <a class="list-group-item list-group-item-action" href="../html/shop/checkout.html">
-                            Ranorex Studio
-                        </a>
+                    <div class="footer-list">
+                        <a class="footer-list-item" href="/tools/embarcadero/radstudio.html">Embarcadero RAD Studio</a>
+                        <a class="footer-list-item" href="/tools/sencha/extjs.html">Sencha Ext JS</a>
+                        <a class="footer-list-item" href="/tools/ranorex/studio.html">Ranorex Studio</a>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <h3 class="h6 text-white mb-3">Social</h3>
-                    <div class="list-group list-group-flush list-group-transparent">
-                        <a class="list-group-item list-group-item-action" href="#">
+                    <div class="footer-list">
+                        <a class="footer-list-item" href="http://facebook.com/bscpolska">
                             <span class="fab fa-facebook-f min-width-3 text-center mr-2"></span>
                             Facebook
                         </a>
-                        <a class="list-group-item list-group-item-action" href="#">
+                        <a class="footer-list-item" href="http://twitter.com/bscpolska">
                             <span class="fab fa-twitter min-width-3 text-center mr-2"></span>
                             Twitter
                         </a>
-                        <a class="list-group-item list-group-item-action" href="#">
+                        <a class="footer-list-item" href="http://github.com/akademiabsc">
                             <span class="fab fa-github min-width-3 text-center mr-2"></span>
                             GitHub
                         </a>
