--- a/space-demo/bsc-offerings.html
+++ b/space-demo/bsc-offerings.html
@@ -1,5 +1,5 @@
 ---
-layout: space
+layout: default-extra
 url-tools: tools/
 url-services: services/
 ---
@@ -82,8 +82,8 @@ url-services: services/
 <div class="container">
 </div>
 
-<div class="bg-gray-100">
-	<div class="container space-1">
+<div class="mt-3">
+	<div class="container p-3">
 		<div class="row">
 			<div class="col-lg-6 mb-7 mb-lg-0">
 				<div class="bsc-offering-item">
@@ -150,3 +150,55 @@ url-services: services/
 		</div>
 	</div>
 </div>
+
+<footer class="mt-5">
+    <div class="container py-5 d-flex flex-nowrap">
+        <div class="footer-columns order-md-2 flex-grow-1">
+            <div class="row mb-7 mb-lg-0">
+                <div class="col-sm-4">
+                    <h6>O nas</h6>
+                    <div class="footer-list">
+                        <a class="footer-list-item" href="/about/bsc-polska.html">BSC Polska</a>
+                        <a class="footer-list-item" href="/about/team.html">Zespół</a>
+                        <a class="footer-list-item" href="/abput/careers.html">Oferty pracy</a>
+                        <a class="footer-list-item" href="/about/contact.html">Kontakt</a>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <h3 class="h6 text-white mb-3">Narzędzia</h3>
+                    <div class="footer-list">
+                        <a class="footer-list-item" href="/tools/embarcadero/radstudio.html">Embarcadero RAD Studio</a>
+                        <a class="footer-list-item" href="/tools/sencha/extjs.html">Sencha Ext JS</a>
+                        <a class="footer-list-item" href="/tools/ranorex/studio.html">Ranorex Studio</a>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <h3 class="h6 text-white mb-3">Social</h3>
+                    <div class="footer-list">
+                        <a class="footer-list-item" href="http://facebook.com/bscpolska">
+                            <span class="fab fa-facebook-f min-width-3 text-center mr-2"></span>
+                            Facebook
+                        </a>
+                        <a class="footer-list-item" href="http://twitter.com/bscpolska">
+                            <span class="fab fa-twitter min-width-3 text-center mr-2"></span>
+                            Twitter
+                        </a>
+                        <a class="footer-list-item" href="http://github.com/akademiabsc">
+                            <span class="fab fa-github min-width-3 text-center mr-2"></span>
+                            GitHub
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <div class="company-logo order-md-1 flex-shrink-1 mr-4">
+            <a class="d-inline-block mb-4" href="index.html" aria-label="Space">
+                <img src="/assets/img2/bsc-polska-logo.png" alt="Logo"
+                    style="width: 90px; max-width: 100%;">
+            </a>
+            <!-- End Logo -->
+            <p class="small text-muted">© BSC Polska 2019.</p>
+        </div>
+    </div>
+</footer>
