Poprawiono nieużywane style w summit2019

--- a/summit/cfp.html
+++ b/summit/cfp.html
@@ -62,15 +62,15 @@ layout: summit-cfp
 </section>
 
 <div class="container mb-5">
-	<div class="p-4 text-light bg-primary rounded">
+	<div class="p-4 bg-secondary rounded">
 		<div class="row">
 			<div class="col-md-5">
-				<p>Chcielibyśmy zaproponować Wam - użytkownikom środowiska programistycznego Delphi, wzięcie udziału w konferencji w charakterze wykładowców. Zachęcamy do podzielenia się swoją wiedzą i doświadczeniem z innymi uczestnikami Zlotu.</p>
-				<p>Udział w charakterze wykładowcy Zlotu jest niewątpliwym wyzwaniem i wymaga od zainteresowanych osób dodatkowej pracy i przygotowań. Chcąc pomóc Wam w podjęciu tej decyzji, osobom których wykłady zostaną zaakceptowane i trafią do agendy spotkania oferujemy atrakcyjne benefity.</p>
+				<p class="mt-3 text-white">Chcielibyśmy zaproponować Wam - użytkownikom środowiska programistycznego Delphi, wzięcie udziału w konferencji w charakterze wykładowców. Zachęcamy do podzielenia się swoją wiedzą i doświadczeniem z innymi uczestnikami Zlotu.</p>
+				<p class="mt-5 text-white">Udział w charakterze wykładowcy Zlotu jest niewątpliwym wyzwaniem i wymaga od zainteresowanych osób dodatkowej pracy i przygotowań. Chcąc pomóc Wam w podjęciu tej decyzji, osobom których wykłady zostaną zaakceptowane i trafią do agendy spotkania oferujemy atrakcyjne benefity.</p>
 			</div>
 
-			<div class="col-md-7 text-primary">
-				<ul class="list-group">
+			<div class="col-md-7 text-primary ">
+				<ul class="list-group why-particiate-list">
 					<li class="list-group-item"> <strong> Bezpłatny udział</strong> w Zlocie (z zapewnieniem wszystkich przywilejów dla „płatnych” Uczestników)</li>
 					<li class="list-group-item"> <strong>Bezpłatne zakwaterowanie</strong> podczas Zlotu w hotelu.</li>
 					<li class="list-group-item">Imienne podziękowanie - Certyfikat Wykładowca Zlotu Programistów</li>
