--- a/js-play/index.html
+++ b/js-play/index.html
@@ -54,7 +54,7 @@ title: playground one
 
 <div class="example" id="example-prototype">
 	<div>
-		<h1>Exercise: JS Scope</h1>
+		<h1>Exercise: JS Prototype</h1>
 	</div>
 	<div class="example-content">
 		<p class="reference">
