--- a/js-play/index.html
+++ b/js-play/index.html
@@ -1,7 +1,10 @@
 ---
 layout: javascript-playground
-title: playground one
+title: JavaScript Playground
 ---
+<div>
+	<a href="js-inheritance.html">Dziedziczenie w JS</a>
+</div>
 
 <div class="example" id="example-object-create">
 	<div>
@@ -12,20 +15,6 @@ title: playground one
 		<ul class="out"></ul>
 	</div>
 </div>
-
-<div class="example" id="example-inheritance-before-ES6">
-	<div>
-		<h1>Exercise: Inheritance before ES6</h1>
-	</div>
-	<div class="example-content">
-		<p class="reference">
-			Mozilla: JavaScript Guide - Details of the object model
-			[<a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Details_of_the_Object_Model">czytaj wiecej</a>]
-		</p>
-		<ul class="out"></ul>
-	</div>
-</div>
-
 
 <div class="example" id="example-closures">
 	<div>
@@ -148,69 +137,6 @@ const ex01_ObjectCreate = {
 		const bar = Object.create(foo);
 		logger.log ("foo.fun1()", foo.fun1() ); 
 		logger.log ("bar.fun1()", bar.fun1() );
-	}
-};
-
-const ex02_InheritanceBeforeES6 = {
-	run: function () {
-		const logger = new ListLogger( {
-			reportElemID: 'example-inheritance-before-ES6'
-		} );
-		// ------------------------------------------
-		// declare
-		// ------------------------------------------
-		// --- Employee class
-		Employee = function  (name) {
-			this.name = name || '';
-			this.dept = 'general';
-		};
-		// --- Manager class (with explanations)
-		Manager = function (name) {
-			Employee.call(this,name);  // call Employee constructor
-			this.reports = [];
-		}
-		Manager.prototype = Object.create(Employee.prototype);   // set prototype chain (this changes constructor to Person function)
-		Manager.prototype.constructor = Manager;   // sets constructor again to Manager
-		// --- Staff class
-		Staff = function (name) {
-			Employee.call(this,name);
-			this.projects = [];
-		}
-		Staff.prototype = Object.create(Employee.prototype);
-		Staff.prototype.constructor = Staff;
-		// --- SalesStaff class
-		function SalesStaff(name) {
-			Staff.call(this,name);
-			this.dept = 'sales';
-			this.quota = 100;
-		}
-		SalesStaff.prototype = Object.create(Staff.prototype);
-		SalesStaff.prototype.constructor = SalesStaff;
-		// --- Engineer class
-		function Engineer (name) {
-			Staff.call(this,name);
-			this.dept = 'engineering';
-			this.machine = '';
-		}
-		Engineer.prototype = Object.create(Staff.prototype);
-		Engineer.prototype.constructor = Engineer;
-		// ------------------------------------------
-		// construct objects
-		// ------------------------------------------
-		var jim = new Employee('Jim Bean');
-		var sally = new Manager('Sally Reynolds');
-		var mark = new Staff('Mark Doe');
-			mark.dept = 'admin';
-			mark.projects = [ 'NAV-navigator' ];
-			mark.bonus = 3000;
-		var fred = new SalesStaff;
-		var jane = new Engineer;
-		// ------------------------------------------
-		logger.log('jim: Employee',JSON.stringify(jim));
-		logger.log('sally: Manager',JSON.stringify(jim));
-		logger.log('mark: Staff',JSON.stringify(mark));
-		logger.log('fred: SalesStaff',JSON.stringify(fred));
-		logger.log('jane: Engineer',JSON.stringify(jane));
 	}
 };
 
@@ -365,7 +291,6 @@ ex06_TestObjectPropertyPerformance = {
 
 ;(function(){
 	ex01_ObjectCreate.run();
-	ex02_InheritanceBeforeES6.run();
 	ex03_ClosuresDemoUsingOnFocusEvent.init();
 	ex04_ScopeAndCall.run();
 	ex05_AddFunctionToPrototype.run();
